--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,265 @@
+ {
+    outline: 1px solid black;
+}
 body {
+    width: 768px;
+    margin: auto;
+    padding: 0;
     font-size: 14px;
     line-height: 21px;
     color: #333333;
     font-weight: normal;
-    font-family: "PT Sans Regular";
+    font-family: "PT Sans", "Arial", sans-serif;
+    text-transform: uppercase;
 }
 h1 {
-    font-size: 30px;
-    line-height: auto;
+    font-size: 21px;
+    line-height: 26px;
     color: #000000;
     font-weight: bold;
-    font-family: "PT Sans Narrow Bold";
+    font-family: "PT Sans", "Arial", sans-serif;
 }
 h2 {
-    font-size: 24px;
-    line-height: auto;
+    font-size: 21px;
+    line-height: 21px;
     color: #000000;
     font-weight: bold;
-    font-family: "PT Sans Narrow Bold";   
+    font-family: "PT Sans", "Arial", sans-serif;
+}
+.clearfix:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+.container {
+    padding: 0;
+    margin: auto;
+    position: relative;
+}
+.logo {
+    position: absolute;
+    width: 138px;
+    left: 50%;
+    margin-left: -69px;
+    z-index: 2;
+}
+.main-navigation {
+    width: 676px;
+    margin: auto;
+    font-size: 0;
+}
+.main-navigation ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 0;
+}
+.main-navigation li {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 14px;
+    line-height: 26px;
+    font-weight: bold;
+    width: 20%;
+    margin-right: 18px;
+}
+.main-navigation li:nth-child(3) {
+    margin-right: 0;
+}
+.left {
+    float: left;
+}
+.right {
+    text-align: right;
+    float: right;
+}
+.main-navigation a {
+    display: block;
+    padding: 15px 0;
+}
+.nav-link {
+    color: #000000;
+    text-decoration: none;
+}
+/*стили для index*/
+.container-content {
+    background-color: #e4f1fa;
+    background-image: url("background-photo-768x512.jpg");
+    height: 510px;
+}
+.container-content img {
+    position: relative;
+    left: 156px;
+    top: 75px;
+}
+.reasons-header{
+    width: 520px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding: 10px 10px;
+    line-height: 26px;
+}
+.text {
+    padding: 10px 0;
+}
+.reasons-container {
+    width: 768px;
+}
+.reason-1 {
+    background-image: url(index-photo-small-1-512x256.jpg);
+    background-repeat: no-repeat;
+    background-position: 255px 0;
+}
+.reason-2 {
+    background-image: url(index-photo-small-2-512x256.jpg);
+    background-repeat: no-repeat;
+}
+.reasons-item {
+    width: 188px;
+    min-height: 177px;
+    background-color: #81b3d2;
+    color: #ffffff;
+    text-align: center;
+    padding: 34px;
+    padding-top: 25px;
+}
+.features-item {
+    float: left;
+    width: 256px;
+    min-height: 330px;
+    text-align: center;
+    background-image: url("index-icon-sprite.png");
+    background-repeat: no-repeat;
+    background-position: center 40px;
+}
+.features-title {
+    margin-top: 164px;
+}
+.features-text {
+    padding: 0px 45px;
+}
+.reason-grey {
+    float: left;
+    background-color: #eeeeee;
+    color: #000000;
+}
+.search-form {
+    width: 568px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 55px;
+    text-align: center;
+}
+.search-title {
+    padding: 15px 0;
+    font-size: 30px;
+}
+.hotel-form {
+    padding: 55px;
+}
+.hotel-form label {
+    margin: 10px;
+    width: 100px;
+    float: left;
+}
+.hotel-form input {
+    margin: 10px;
+    width: 345px;
+    float: left;
+}
+.hotel-search {
+    background-color: #766357;
+    font-size: 21px;
+    font-weight: bold;
+    color: #ffffff;
+    padding: 25px 0;
+}
+.btn-find {
+    width: 457px;
+    font-size: 21px;
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #81b3d2;
+    padding: 12px 0;
+}
+/*стили для hotels*/
+.feature-search-form {
+    background-image: url("hotels-bk-768x418.jpg");
+}
+.infrastructure {
+    width: 200px;
+    margin-left: 20px;
+    float: left;
+}
+.accomodation-type {
+    width: 200px;
+    margin-left: 10px;
+    float: left;
+}
+.right-column {
+    width: 230px;
+    margin-left: 10px;
+    float: left;
+}
+.results {
+    width: 676px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+}
+.results-count, 
+.sort {
+    display: inline-block;
+}
+
+.results-container {
+    width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.results-hotel {
+    width: 676px;
+    border-top: 1px solid #e5e5e5;
+    margin-left: auto;
+    margin-right: auto;
+}
+.results-hotel:last-child {
+    border-bottom: 1px solid #e5e5e5;
+}
+.central-column {
+    width: 380px;
+    float: left;
+}
+.rating {
+    width: 153px;
+    float: right;
+}
+.button {
+    display: inline-block;
+}
+/* Общие стили*/
+
+.main-footer {
+    padding: 5px 32px;
+}
+.hashtag {
+    width: 160px;
+    float: left;
+    margin-left: 45px;
+    margin-right: 85px;
+    padding: 41px 0;
+    font-size: 21px;
+    font-weight: bold;
+}
+.footer-social {
+    width: 175px;
+    float: left;
+    margin-right: 65px;
+}
+.footer-copyright {
+    width: 210px;
+    float: right;
+    margin-right: 18px;
+    margin-top: -10px;
 }
