--- a/css/style.css
+++ b/css/style.css
@@ -826,21 +826,23 @@ fieldset {
 /* Стили футера */
 
 .main-footer {
-    margin-top: 472px;
-    position: relative;
-    padding: 6px 32px;
+    width: 708px;
+    top: 2641px;
+    position: absolute;
+    padding: 6px 30px;
     z-index: 3;
     opacity: 0.9;
     background-color: #ffffff;
 }
 .inner-footer {
     opacity: 1;
+    top: 815px;
 }
 .hashtag {
     float: left;
-    margin-left: 29px;
-    margin-right: 112px;
-    padding: 44px 0;
+    margin-left: 0px;
+    margin-right: 84px;
+    padding: 44px 30px;
     font-size: 21px;
     font-weight: bold;
 }
@@ -874,7 +876,7 @@ fieldset {
 }
 .footer-copyright {
     float: right;
-    margin-right: -2px;
+    margin-right: 0px;
     margin-top: 35px;
 }
 .footer-copyright span {
