--- a/css/style.css
+++ b/css/style.css
@@ -580,7 +580,7 @@ h2 {
 }
 .price-controls label {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     width: 50%;
     font-size: 14px;
     text-align: right;
