--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 /* Иконочный шрифт */
 @font-face {
-  font-family: 'symbols-sedona';
-  src: url('../font/symbols-sedona.eot?60737633');
-  src: url('../font/symbols-sedona.eot?60737633#iefix') format('embedded-opentype'),
-       url('../font/symbols-sedona.woff?60737633') format('woff'),
-       url('../font/symbols-sedona.ttf?60737633') format('truetype'),
-       url('../font/symbols-sedona.svg?60737633#symbols-sedona') format('svg');
+  font-family: "symbols-sedona";
+  src: url("../font/symbols-sedona.eot?60737633");
+  src: url("../font/symbols-sedona.eot?60737633#iefix") format("embedded-opentype"),
+       url("../font/symbols-sedona.woff?60737633") format("woff"),
+       url("../font/symbols-sedona.ttf?60737633") format("truetype"),
+       url("../font/symbols-sedona.svg?60737633#symbols-sedona") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -14,8 +14,8 @@
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
-    font-family: 'symbols-sedona';
-    src: url('../font/symbols-sedona.svg?60737633#symbols-sedona') format('svg');
+    font-family: "symbols-sedona";
+    src: url("../font/symbols-sedona.svg?60737633#symbols-sedona") format("svg");
   }
 }
 */
@@ -51,22 +51,19 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-facebook:before { content: '\66'; } /* 'f' */
-.icon-twitter:before { content: '\74'; } /* 't' */
-.icon-up-dir:before { content: '\25b2'; } /* '▲' */
-.icon-down-dir:before { content: '\25bc'; } /* '▼' */
-.icon-star:before { content: '\2605'; } /* '★' */
-.icon-check-off:before { content: '\2610'; } /* '☐' */
-.icon-check-on:before { content: '\2611'; } /* '☑' */
-.icon-calendar:before { content: '\e800'; } /* '' */
-.icon-plus:before { content: '\e801'; } /* '' */
-.icon-minus:before { content: '\e802'; } /* '' */
-.icon-youtube:before { content: '\f39e'; } /* '' */
+.icon-facebook:before { content: "\66"; } /* "f" */
+.icon-twitter:before { content: "\74"; } /* "t" */
+.icon-up-dir:before { content: "\25b2"; } /* "▲" */
+.icon-down-dir:before { content: "\25bc"; } /* "▼" */
+.icon-star:before { content: "\2605"; } /* "★" */
+.icon-check-off:before { content: "\2610"; } /* "☐" */
+.icon-check-on:before { content: "\2611"; } /* "☑" */
+.icon-calendar:before { content: "\e800"; } /* "" */
+.icon-plus:before { content: "\e801"; } /* "" */
+.icon-minus:before { content: "\e802"; } /* "" */
+.icon-youtube:before { content: "\f39e"; } /* "" */
 
 /* Стили страниц*/
- {
-    outline: 1px solid black;
-}
 body {
     width: 768px;
     margin: auto;
@@ -93,7 +90,7 @@ h2 {
     font-family: "PT Sans", "Arial", sans-serif;
 }
 .clearfix:after {
-    content: '';
+    content: "";
     display: table;
     clear: both;
 }
@@ -112,13 +109,11 @@ h2 {
 .main-navigation {
     width: 676px;
     margin: 0 auto;
-    font-size: 0;
 }
 .main-navigation ul {
-    margin: 0;
-    padding: 0;
     list-style: none;
     font-size: 0;
+    padding: 0;
 }
 .main-navigation li {
     display: inline-block;
@@ -139,13 +134,11 @@ h2 {
     text-align: right;
     float: right;
 }
-.main-navigation a {
-    display: block;
-    padding: 15px 0;
-}
 .nav-link {
     color: #000000;
     text-decoration: none;
+    display: block;
+    padding: 15px 0;
 }
 .main-navigation a:hover {
     color: #81b3d2;
@@ -192,11 +185,13 @@ h2 {
     margin-bottom: 53px;
 }
 .reason-1 {
+    background-color: #ffffff;
     background-image: url(../img/index-photo-small-1-512x256.jpg);
     background-repeat: no-repeat;
     background-position: 256px 0;
 }
 .reason-2 {
+    background-color: #ffffff;
     background-image: url(../img/index-photo-small-2-512x256.jpg);
     background-repeat: no-repeat;
 }
@@ -222,6 +217,7 @@ h2 {
     width: 76px;
     height: 76px;
     margin: 26px auto;
+    background-color: #ffffff;
     background-image: url("../img/sprite.png");
     background-repeat: no-repeat;
 }
@@ -245,7 +241,7 @@ h2 {
     padding-right: 35px;
 }
 .features-title {
-    margin-top: px;
+    margin-top: 0px;
     padding: 5px 0;
 }
 .features-text {
@@ -294,7 +290,6 @@ h2 {
 .hotel-search {
     width: 100%;
     background-color: #766357;
-    font-family: "PT Sans", "Arial", sans-serif;
     font-size: 21px;
     line-height: 26px;
     font-weight: bold;
@@ -317,10 +312,10 @@ h2 {
     background-color: #ffffff;
     display: none;
 }
-@-webkit-keyframes appear {
+@keyframes appear {
    from { opacity: 0; }
 }
-@keyframes appear {
+@-webkit-keyframes appear {
    from { opacity: 0; }
 }
 .hotel-form-show {
@@ -329,7 +324,6 @@ h2 {
     animation: appear 0.6s;
     animation-timing-function: ease-out;
 }
-
 @keyframes shake {
   0%, 100% {
     transform: translateX(0);
@@ -341,7 +335,6 @@ h2 {
     transform: translateX(10px);
   }
 }
-
 @-webkit-keyframes shake {
   0%, 100% {
     transform: translateX(0);
@@ -368,8 +361,8 @@ h2 {
     width: 105px;
     text-align: left;
     padding-top: 6px;
-    padding-left: 1px;
-    padding-bottom: 4px;
+    padding-left: 0px;
+    padding-bottom: 5px;
 }
 .column-right {
     float: right;
@@ -378,7 +371,7 @@ h2 {
 .hotel-form .input {
     border: 2px solid #f2f2f2;
     background-color: #f2f2f2;
-    padding: 7px 5px;
+    padding: 8px 4px;
     font-size: 14px;
     font-weight: normal;
     font-family: "PT Sans", "Arial", sans-serif;
@@ -460,7 +453,7 @@ h2 {
 }
 .label-kids {
     float: right;
-    padding: 7px 0;
+    padding: 7px 3px;
     margin-right: 26px;
 }
 .hotel-form input::-webkit-input-placeholder {
@@ -483,7 +476,6 @@ h2 {
     background-color: #81b3d2;
     padding: 16px 0;
     text-align: center;
-    font-family: "PT Sans", "Arial", sans-serif;
 }
 .btn-find:hover {
     background-color: #669ec0;
@@ -492,6 +484,8 @@ h2 {
     background-color: #5496bd;
     color: #94b9d2;
 }
+
+/* Карта */
 .map {
     position: absolute;
     left: 0px;
@@ -499,6 +493,7 @@ h2 {
 }
 /*стили для hotels*/
 .feature-search-form {
+    background-color: #81b3d2;
     background-image: url("../img/hotels-bk-768x418.jpg");
     background-position: 0px -56px;
     background-repeat: no-repeat;
@@ -520,26 +515,30 @@ h2 {
 }
 .column label {
     display: block;
-    padding: 5px 13px;
-    margin-bottom: 10px;
+    padding-top: 7px;
+    padding-left: 19px;
+    padding-bottom: 8px;
+    margin-bottom: 6px;
 }
 .feature-search-form input[type="checkbox"] {
     display: none;
 }
 .feature-search-form input[type="checkbox"] + label::before {
     content: "\2610";
-    font-size: 32px;
+    font-family: "symbols-sedona";
+    font-size: 26px;
     position: relative;
-    top: 4px;
-    left: -9px;
+    top: 5px;
+    left: -19px;
     color: #b5b5b5;
 }
 .feature-search-form input[type="checkbox"]:checked + label::before {
     content: "\2611";
-    font-size: 32px;
+    font-family: "symbols-sedona";
+    font-size: 26px;
     position: relative;
-    top: 4px;
-    left: -11px;
+    top: 5px;
+    left: -19px;
     color: #b5b5b5;
 }
 .feature-search-form input[type="checkbox"]:disabled + label::before {
@@ -551,26 +550,26 @@ h2 {
 .infrastructure {
     margin: 12px 46px;
     float: left; 
-    margin-bottom: 17px;
+    margin-bottom: 16px;
 }
 .accomodation-type {
     margin: 12px 35px;
     float: left;
-    margin-bottom: 17px;
+    margin-bottom: 16px;
 }
 .right-column {
     width: 250px;
     min-height: 158px;
-    margin-left: 7px;
+    margin-left: 8px;
     margin-top: 7px;
     float: left;
 }
 .range-filter {
     display: block;
-    width: 225px;
+    width: 224px;
     margin-left: -3px;
     margin-top: -16px;
-    margin-bottom: 3px;
+    margin-bottom: 2px;
 }
 .price-controls {
     font-size: 0;
@@ -581,27 +580,30 @@ h2 {
 .price-controls label {
     display: inline-block;
     vertical-align: middle;
-    width: 50%;
+    width: 110px;
     font-size: 14px;
     text-align: right;
+    padding-top: 1px;
 }
 .price-controls input {
-    font-family: "PT Sans", "Arial", sans-serif;
     font-size: 14px;
     text-align: left;
     color: #ffffff;
     border: none;
     outline: none;
     background: none;
-    width: 35px;
+    width: 44px;
     padding: 6px 14px;
-    padding-left: 0;
-    margin-right: px;
+    padding-left: 0px;
+}
+.price-controls .input-min-price {
+    width: 29px;
 }
 .min-price:after {
     content: "";
-    height: 22px;
     border: 1px solid #ffffff;
+    padding-top: 2px;
+    padding-bottom: 1px;
 }
 .range-controls {
     position: relative;
@@ -614,7 +616,7 @@ h2 {
     background: rgba(255, 255, 255, 0.5);
 }
 .range-controls .bar {
-    width: 70%;
+    width: 81%;
     height: 2px;
     background: #ffffff;
 }
@@ -632,7 +634,6 @@ h2 {
 .range-controls .toggle-min {
     left: 4px;
 }
-
 .range-controls .toggle-max {
     left: 160px;
 }
@@ -646,19 +647,19 @@ fieldset {
 .btn-show {
     display: inline-block;
     vertical-align: top;
-    padding: 7px 34px;
+    padding: 7px 33px;
+    padding-bottom: 6px;
     border: 2px solid #ffffff;
-    border-radius: 3px;
+    border-radius: 2px;
     text-transform: uppercase;
     background: transparent;
-    margin-left: 53px;
+    margin-left: 52px;
     color: #ffffff;
-    font-size: 14px;
-    font-family: "PT Sans", "Arial", sans-serif; 
+    font-size: 14px; 
 }
 .results {
-    width: 676px;
-    margin: 0 auto;
+    width: 678px;
+    margin: 0px auto;
     margin-bottom: 2px;
 }
 .results-count, 
@@ -671,13 +672,16 @@ fieldset {
     line-height: 26px;
     font-weight: bold;
     margin-right: 44px;
+    padding-top: 0px;
 }
 .sort {
     font-size: 12px;
     line-height: 18px;
-    margin-right: 35px;
+    margin-right: 34px;
+    padding-top: 3px;
 }
 .sort-btn {
+    vertical-align: middle;
     font-size: 12px;
     line-height: 18px;
     margin-right: 29px;
@@ -706,12 +710,12 @@ fieldset {
     color: #81b3d2;
 }
 .icon-up-dir {
-    left: 83px;
-    top: 2px;
+    left: 85px;
+    top: 5px;
 }
 .icon-down-dir {
-    left: 74px;
-    top: 2px;
+    left: 76px;
+    top: 4px;
 }
 .icon-up-dir:hover,
 .icon-down-dir:hover {
@@ -727,7 +731,8 @@ fieldset {
 }
 .hotel {
     border-top: 1px solid #e5e5e5;
-    padding: 30px 0;
+    padding-bottom: 30px;
+    padding-top: 30px;
 }
 .hotel:last-child {
     border-bottom: 1px solid #e5e5e5;
@@ -747,12 +752,13 @@ fieldset {
     font-size: 21px;
     line-height: 26px;
     font-weight: bold;
-    margin-top: -5px;
+    margin-top: -4px;
     margin-bottom: 6px;
-    margin-left: 32px;
+    margin-left: 31px;
+    padding-top: 0px;
     text-decoration: none;
     color: #000000;
-    width: 230px;
+    width: 330px;
     display: block;
 }
 .hotel-name:hover {
@@ -771,7 +777,7 @@ fieldset {
 }
 .results-hotel-type {
     width: 110px;
-    margin-left: 32px;
+    margin-left: 31px;
 }
 .results-price-range {
     margin-left: 2px;
@@ -791,7 +797,7 @@ fieldset {
 .btn-more {
     background-color: #81b3d2;
     margin-left: 32px;
-    margin-right: 3px;
+    margin-right: 2px;
 }
 .btn-more:hover {
     background-color: #669ec0;
@@ -822,15 +828,15 @@ fieldset {
     margin-right: 0px;
     position: relative;
     left: 3px;
-    top: -3px;
+    top: -2px;
 }
 .rating {
     float: right;
     width: 90px;
-    padding: 4px 5px;
+    padding: 2px 6px;
     background-color: #f2f2f2;
     color: #666666;
-    margin-top: 40px;
+    margin-top: 43px;
 }
 /* Стили футера */
 
@@ -845,12 +851,12 @@ fieldset {
 }
 .inner-footer {
     opacity: 1;
-    top: 815px;
+    top: 813px;
 }
 .hashtag {
     float: left;
     margin-left: 0px;
-    margin-right: 84px;
+    margin-right: 83px;
     padding: 44px 30px;
     font-size: 21px;
     font-weight: bold;
@@ -885,7 +891,7 @@ fieldset {
 }
 .footer-copyright {
     float: right;
-    margin-right: 0px;
+    margin-right: 1px;
     margin-top: 35px;
 }
 .footer-copyright span {
