--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ h2 {
     width: 138px;
     left: 50%;
     margin-left: -69px;
-    z-index: 2;
+    z-index: 3;
 }
 .main-navigation {
     width: 676px;
@@ -288,6 +288,7 @@ h2 {
     margin-bottom: 45px;
 }
 .hotel-search {
+    display: block;
     width: 100%;
     background-color: #766357;
     font-size: 21px;
@@ -297,9 +298,8 @@ h2 {
     padding-top: 31px;
     padding-bottom: 29px;
     margin-bottom: 0px;
-    cursor: pointer;
     text-transform: uppercase;
-    border: none;
+    text-decoration: none;
 }
 /* Всплывающая форма*/
 
@@ -488,7 +488,19 @@ h2 {
 /* Карта */
 .map {
     position: absolute;
-    left: 0px;
+    left: 0;
+    z-index: 2;
+}
+.map-jpeg {
+    display: none;
+}
+.no-js iframe {
+    display: none;
+}
+.no-js .map-jpeg {
+    position: absolute;
+    left: 0;
+    top: 0px;
     z-index: 1;
 }
 /*стили для hotels*/
@@ -838,6 +850,16 @@ fieldset {
     color: #666666;
     margin-top: 43px;
 }
+/*стили для hotel-search*/
+.inner-form {
+    display: block;
+    width: 453px;
+    margin: 0 auto;
+}
+.inner-form .icon-calendar {
+    left: 420px;
+}
+
 /* Стили футера */
 
 .main-footer {
@@ -845,7 +867,7 @@ fieldset {
     top: 2641px;
     position: absolute;
     padding: 6px 30px;
-    z-index: 3;
+    z-index: 4;
     opacity: 0.9;
     background-color: #ffffff;
 }
